--- a/vol1/01-16.md
+++ b/vol1/01-16.md
@@ -46,3 +46,66 @@
 
 &emsp;
 
+主演这部恋爱电影的两位演员，对我而言并不算太陌生。
+
+我还是小学生的时候，有一年暑假跟着那个女人回老家，恰巧看过男演员主演的政坛喜剧。而在同一个夏天，那个女人还带着我看过女演员主演的青春励志电影。顺带一提，那位女演员还曾连续两年担任红白歌会的主持人——当然这也是我在那个女人的老家和她的家人们一起看的。
+
+我就这样一边喝着柠檬绿茶，一边观看着两位主角的恋爱故事。
+
+两位主角还是大学生的时候，因恰巧都错过了末班电车而偶然结识，并为各自的爱好相投而互生好感。
+
+随着感情的不断发展，男主角向女主角告白，两人开始了交往和同居生活。然而，男主角出于自身兴趣而找到的工作却收入不佳，而且被父母认为缺乏社会人的责任心而断绝了经济支持。
+
+为了维持两人的生活，男主角选择进入了一家企业，最终在繁忙的工作之下，对原有的共同爱好的兴趣逐渐减退。两人之间不仅不再对话，连身体上的交流都停止了。
+
+有一天，女主角决定改为从事收入降低但能够继续做喜好的事的新工作。然而，在男主角眼里，女主角只不过是在继续玩乐而已。在一次争吵之中，男主角冲动之下提出了求婚——在他眼里，这样女主角就可以做自己喜好的事情了。然而，女主角觉得这不是自己想要的求婚，最终拒绝了他。
+
+——到了这一步，男女主角之间的关系，终究会迎来结束的那一天。
+
+这样想着的我有点喘不过气来，想要再喝点柠檬茶，却发现杯子早已空了。
+
+我看向坐在身旁的渡边学姐。她似乎看的有些出神，左手想要向我这边伸过来——然而，她很快又将手缩了回去。
+
+突然间，我脑海中想到了一首和这部电影很相配的诗。
+
+*Nature's first green is gold,*
+
+*Her hardest hue to hold.*
+
+*Her early leaf's a flower;*
+
+*But only so an hour.*
+
+*Then leaf subsides to leaf,*
+
+*So Eden sank to grief.*
+
+*So dawn goes down to day.*
+
+*Nothing gold can stay.*
+
+故事继续进行着。关系不断冷淡下去的男女主角被邀请参加婚礼后，在一家家庭餐厅中讨论要不要分开。男主角不仅不想分手，还再一次提出了求婚——哪怕没有了恋爱感情，他仍然希望女主角以家人的身份陪在自己身旁。这时，女主角看到了一旁如同他们初识时一般欢笑的情侣，想到她和男主角的过往，哭着从家庭餐厅中跑了出去。
+
+男女主角在最后的拥抱中决定分开——在这之后的三个月内，他们似乎又变回了可以友好相处的关系。然而，这一切都为时已晚了。
+
+故事的最后，偶然在咖啡厅中再会的男女主角，最终如陌生人般互相挥手作别，和各自新的交往对象迈入了新的生活。
+
+——也许对他们而言，这就是最好的结局了吧。
+
+——至少他们没有选择用多余的关系互相囚禁。
+
+——而且，也没有伤及无辜。
+
+我的内心不断进行着自我安慰。然而，却又有一个声音不断提出质疑。
+
+——那又何必要谈这场恋爱呢？
+
+——难道这不是对人生的浪费吗？
+
+——既然选择了恋爱，为什么又要中途停止交流？
+
+——就不能有和这不一样的结局吗？
+
+我一边看着滚动的演职员表，一边徒劳地寻找着解答。
+
+然而，我却得不到任何一个答案。
