--- a/vol1/01-16.md
+++ b/vol1/01-16.md
@@ -66,7 +66,7 @@
 
 我看向坐在身旁的渡边学姐。她似乎看的有些出神，左手想要向我这边伸过来——然而，她很快又将手缩了回去。
 
-突然间，我脑海中想到了一首和这部电影很相配的诗。
+突然间，我脑海中想到了一首和这部电影很相配的诗——是我上网时看到的。
 
 *Nature's first green is gold,*
 
@@ -86,7 +86,7 @@
 
 故事继续进行着。关系不断冷淡下去的男女主角被邀请参加婚礼后，在一家家庭餐厅中讨论要不要分开。男主角不仅不想分手，还再一次提出了求婚——哪怕没有了恋爱感情，他仍然希望女主角以家人的身份陪在自己身旁。这时，女主角看到了一旁如同他们初识时一般欢笑的情侣，想到她和男主角的过往，哭着从家庭餐厅中跑了出去。
 
-男女主角在最后的拥抱中决定分开——在这之后的三个月内，他们似乎又变回了可以友好相处的关系。然而，这一切都为时已晚了。
+男女主角在最后的拥抱中决定分手——在这之后的三个月内，他们似乎又变回了可以友好相处的关系。然而，这一切都为时已晚了。
 
 故事的最后，偶然在咖啡厅中再会的男女主角，最终如陌生人般互相挥手作别，和各自新的交往对象迈入了新的生活。
 
@@ -108,4 +108,14 @@
 
 我一边看着滚动的演职员表，一边徒劳地寻找着解答。
 
-然而，我却得不到任何一个答案。
+然而，却没能找到任何一个答案。
+
+&emsp;
+
+“雨宫同学，你脸色是不是不太好？”
+
+散场之后，我和渡边学姐走出了影院。她的脸上露出了不言而喻的担忧表情。
+
+“我不明白。”
+
+“”
