--- a/vol1/01-16.md
+++ b/vol1/01-16.md
@@ -1,6 +1,6 @@
 ### 16 Rigardante la Filmon
 
-虽然是黄金周的第一天，但购物中心的人流并没有想象中的那般密集。大概相比天道市，人们可能更愿意选择搭乘火车或地铁去邻近的两个大城市旅游或是购物吧。
+虽然是黄金周的第一天，但购物中心的人流并没有想象中的那般密集。大概相比前往市中心，人们可能更愿意选择和我们相反的方向，搭乘火车或地铁去邻近的两个大城市旅游或是购物吧。
 
 “说起来，今天拟定的行程是怎样的？”
 
@@ -88,7 +88,7 @@
 
 男女主角在最后的拥抱中决定分手——在这之后的三个月内，他们似乎又变回了可以友好相处的关系。然而，这一切都为时已晚了。
 
-故事的最后，偶然在咖啡厅中再会的男女主角，最终如陌生人般互相挥手作别，和各自新的交往对象迈入了新的生活。
+故事的结尾，偶然在咖啡厅中再会的男女主角，最终如陌生人般互相挥手作别，和各自新的交往对象迈入了新的生活。
 
 ——也许对他们而言，这就是最好的结局了吧。
 
@@ -118,4 +118,117 @@
 
 “我不明白。”
 
-“”
+“你怎么了？”
+
+我甚至不知道该怎样回答学姐的问题。相反，我迫切想要知道，学姐如何看待我的疑问。
+
+“我总觉得，男女主角的交流似乎不太对劲。当关系冷淡下去的时候，但凡他们好好谈一谈，最终可能都不会分开吧？”
+
+“那是因为，这两个人终究只是生活在自己的世界里。或者换个说法，他们都是性格上很强势的人，这才让两个人之间的矛盾最终变得难以化解。”
+
+学姐的话我一时间没能听懂。
+
+“渡边学姐你说性格上很强势，指的是他们的自我意识很强吗？”
+
+“雨宫同学你应该有注意到故事的结尾吧？他们各自找到的新恋人，都是不那么强势的人。这样性格搭配下的恋爱，才更容易维持下去。”
+
+这一次，我陷入了沉默。明明因为兴趣相投而交往的两个人，却因为性格上的对冲而最终分手。虽然这很合乎情理，但我内心还是有些难以平静。
+
+大概是鬼使神差，当我注意到的时候，已经向学姐抛出了一个新的问题：
+
+“如果这样说的话，已经分开的两个人，还能再度走到一起吗？”
+
+“我不知道雨宫同学你说的是谁，不过这个问题取决于分开的原因了。”
+
+学姐停顿了一下继续说道：
+
+“如果分开的原因并非性格上的矛盾，只是单纯的不可抗力，那么的确还有复合的可能性。相反，越是性格上不相容的两个人，就越不可能重新走到一起。”
+
+听到她的回答，我不由得想到了生活在那个我已经不想再称之为“家”的地方的那两个人。也许，像通常的家人——虽然我并不知道多少这样的例子——一样生活，只不过是我不切实际的妄想而已。
+
+此时，那个女人在上上个星期日和闺蜜们的对话，以及在上个星期日和那个被她称为U的男人同行的场面，在我的脑海中一并浮现。
+
+“那如果两个人复合的话，这段感情和之前的感情能够视为同样的存在吗？”
+
+这次轮到渡边学姐沉默了。过了一会，她才悠悠地回答：
+
+“就像树上的花朵一样。恋情是花，而两个人之间的羁绊是树。只要树还在，花总有绽放的一天。”
+
+我们又走了几步，学姐突然向我问道：
+
+“雨宫同学有恋爱过吗？你对‘你自己的恋爱’又是怎样看待的？”
+
+此时的我才注意到，学姐的脸颊似乎有些红。
+
+“对不起，我并没有恋爱过。在我看来，恋爱也许是一生中只应该有一次的存在。如果恋爱结束了的话——”
+
+我停下脚步，闭上眼睛，说出自己的回答。
+
+“**我不会给自己留下尝试第二次恋爱的生命**。我曾经读过一首名叫《Nothing Gold Can Stay》的诗，如果不能一直Stay Gold，我想我的生命也应该到此为止。”
+
+时间的流动，仿佛在一瞬间静止了。过了好一会，学姐才问出了下一个问题：
+
+“就没有女孩子向你告白过吗？”
+
+“出于整蛊动机的假告白倒是有过一次——而且对方还是个男生。”
+
+“男生？”
+
+我点了点头。
+
+“对，那是刚上初中时候的事了。寄给我告白信的人约我到某个教室，而我特意早到了十分钟，藏在教室的扫除用品柜里。”
+
+&emsp;
+
+当我透过柜门的缝隙看向教室时，发现外面坐着好几个男生——大概都是特意来看我笑话的。至于女生，我一个都没有见到。
+
+我一边避免发出任何声音，一边在心里数着数。
+
+五九、六零、六一。
+
+——没想到那个小鬼居然没有上钩啊。
+
+二五六、二五七、二五八。
+
+——说不准人家只是忘了呢。
+
+四七二、四七三、四七四。
+
+——要是傻乎乎的来了，可就有大乐子了。
+
+七四四、七四五、七四六。
+
+——还不来啊。
+
+九五一、九五二、九五三。
+
+——看样子他是不打算来了。散了散了，这小鬼真没意思。
+
+一脸败兴的男生们离开了教室。
+
+一七九八、一七九九、一八零零。
+
+确认他们没有返回迹象的我，这才打开柜门，整个人栽倒在地上无力地喘气。
+
+从此之后，确认**那个女人的话**并没有错的我，再也没有产生过他人对自己抱有好感的错觉。也许那个女大学生是例外，但人家早就不把我当一回事了。
+
+&emsp;
+
+“如果当时我如约前往，或者发出什么声音被他们从柜子里揪出来的话，说不准现在已经打开新世界的大门了吧。”
+
+听到我如同自嘲般的陈述，连学姐也笑不出来了。
+
+“所以你对他人的好感的态度……算了，还是不说了吧，免得你又伤心。中午你要吃点什么吗？”
+
+“渡边学姐想吃什么？”
+
+“盖饭怎么样？”
+
+在我看来，学姐给出的是一个非常正统的建议。
+
+“我觉得还可以，就盖饭吧。记得す〇家是在四楼来着？”
+
+“嗯，我们现在下去，应该不太需要排队。”
+
+话音刚落，学姐就向自动扶梯走去，我赶忙跟在她的身旁。
+
