--- a/vol1/01-17.md
+++ b/vol1/01-17.md
@@ -4,7 +4,7 @@
 
 “只是有点饿了而已。倒是学姐你点了这么多，就不怕吃不下吗？”
 
-我放下手中盛有冷麦茶的杯子，看向服务员刚刚送到桌上的菜品。渡边学姐的面前摆着大份的牛肉盖饭、芝士鸡腿、温泉蛋和味增汤，而我的面前则是大份的泡菜生姜烧肉盖饭、秋刀鱼、冷豆腐和豚汁。
+我放下手中盛有冷麦茶的杯子，看向服务员刚刚送到桌上的菜品。渡边学姐的面前摆着特大份的牛肉盖饭、芝士鸡腿、温泉蛋、沙拉和味增汤，而我的面前则是特大份的泡菜生姜烧肉盖饭、秋刀鱼、炸鸡块、冷豆腐和豚汁。
 
 面对我的问题，学姐露出了狡黠的微笑：
 
@@ -34,4 +34,120 @@
 
 &emsp;
 
+大约十五分钟后，离开す〇家的我们沿着自动扶梯下到了二楼。
 
+“哇——吃得好饱——”
+
+“我也是。前面就是学姐说的书店吧？”
+
+“嗯。我们进去看看。”
+
+刚一走进书店，学姐就被摆在推荐区上的书籍吸引了目光。
+
+“今天这里的推荐主题是旅行哦。”
+
+“这样吗？”
+
+我冷淡地回应着。学姐露出了不解的表情：
+
+“雨宫同学不喜欢旅行吗？”
+
+“该怎么说呢……我不太喜欢和人一起出门旅行吧。”
+
+没错。如果还有比呆在那个令人窒息的家里更加难受的事，那一定是和家人出去旅游吧。
+
+我完全没有一家三口一起出行的记忆。且不论连话都不和我说几句的那个男人，上一次被那个女人拖出去还是小学毕业的时候。从出发到返回的过程中，整个人都难受的要死，心里只是数着距离旅行结束还剩下多少时间。这样的旅行，和**坐牢**也没什么区别。
+
+事到如今，我甚至懒得再看自己当时被那个女人拍下来的样子——哪怕连强装出来的笑容，都是如此的屈指可数。而在这之后，我就再没留下过什么照片了。
+
+“那你有一个人出去旅行过吗？”
+
+“一个人的话，大概也只能叫外出吧。就像我被那位女大学生搞了的那次一样。”
+
+气氛突然有点尴尬。为了转移话题，我撇开不必要的回想向学姐问道：
+
+“那学姐你呢？”
+
+“对啊。我感觉出门旅行本身就足以创造很多美好的回忆了。比如，每年黄金周我都会和父母一起去泡温泉。”
+
+我再一次陷入了沉默。伤心和羡慕的感情，在心中互相缠绕着，化为解不开的线团。
+
+“……你没事吧？”
+
+“……我没什么。”
+
+过了不知道多久，我才向学姐挤出一个微笑，随后看向摆在推荐区上的书籍。
+
+《L'ancien Patagonian Express》。
+
+《Rencontres avec des Arbres Remarquables》。
+
+《Le monde Perdu du Kalahari》。
+
+《Camino de Santiago》。
+
+我拿过供读者试阅的一册《L'ancien Patagonian Express》，草草翻了几十页后就将它放了回去。
+
+这本书讲的是作者从美国东海岸的波士顿搭乘火车前往阿根廷巴达哥尼亚的旅途上的点点滴滴。然而，虽然我很早就从那个女人口中得知自己出生在美国，却无论如何都无法从书的开头部分体会到作者在火车上的感受。大概还是因为我并没有自己在美国生活过的实感吧。
+
+抬起头的我看向渡边学姐，发现她已经离开了推荐区，正在书架之间的小路中漫步。
+
+——真让人羡慕。
+
+我摇摇头，向摆放着历史类著作的书架走去，从上面抽了一本《Le Dernier des Tsars》后，走到供顾客阅读和休息的区域，这才坐在椅子上翻开了书。
+
+&emsp;
+
+由于大量文学或影视作品的渲染，尼古拉二世一家遭遇的悲剧早已不是什么鲜为人知的东西。这本《Le Dernier des Tsars》描述的，正是从沙皇被迫退位到全家被处决为止的这五百多天内发生的事。
+
+当翻到中段的时候，我才意识到，在内战期间被处决的罗曼诺夫家族成员，远不止尼古拉二世和他的至亲。然而在我看来，这一系列被绝大多数人认为“惨无人道”的处决行动，却并非毫无合理性可言。
+
+当时的俄罗斯正处于各个势力为争夺权力而战争不断的混沌状态——简直就和如今时常被人提到的生存游戏中的场面一样。然而与生存游戏不同，每一天都有无数俄罗斯人的生命在内战中消失，与此同时，整个国家还面临着被外部势力干涉的风险。
+
+在这一混沌状态中，确保了莫斯科和彼得格勒这两个最大的城市，并且控制了铁路的<ruby><rb>红色政权</rb><rt>Bolsheviks</rt></ruby>占据了优势地位。如果能够顺利平息内战，那么他们自然会给尼古拉二世一家一个相对公正的待遇——最多只会审判尼古拉本人，而他的子女并不会被控以罪名。然而当时的状况下，红色政权的统治并不稳固，甚至还面临着被刺客袭击的重大风险。处于高度紧张的精神状态之下的领导者们，此时更容易遵从自己的本能，而非理性。
+
+一旦有皇室成员——哪怕是女性——成为某一反对派势力的协助者，那么对局势都会产生难以预料的影响，甚至会让天平发生逆转。同样，一旦自己在争取生存权的斗争中失败，也几乎不可能得到敌人公正的待遇。在本能的驱动下，红色政权的领导人们，最终做出了将罗曼诺夫家族的成员——不止是尼古拉二世和他的家人们——全员处决的决定。
+
+做出这个决定也许非常艰难，但当决定下达的那一刻，高超的运转效率就意味着几乎不可能出现幸存者——至少对被囚禁在叶卡捷琳堡的尼古拉二世一家而言是这样。换而言之，在这之后出现的那些以幸存的公主身份自居的人，只可能是冒牌货——几十年前发现的尸体证实了这一点。
+
+——编写历史的过程，也是一个争夺话语权的过程。
+
+当我合上书的时候，脑子里想到的就只有这句话。
+
+如今对尼古拉二世一家进行重新评判，终究只是源自于一个事实，那就是那个处决他们的红色政权早已灰飞烟灭。
+
+在那个容不得丝毫差错的国际局势下，性格软弱，犹豫不决，这本身就是尼古拉二世难以饶恕的罪过。正是因为他的一系列决定引发了各个国家的战略误判，才让整个欧洲陷入了战争的深渊，从人类文明的顶端开始跌落。
+
+如今的人们也许会哀叹尼古拉二世一家的不幸遭遇，可又有谁去哀叹被他错误的决断推入深渊的生命们呢？
+
+站起身准备把书放回去的我，发现渡边学姐就坐在离我不远的地方。
+
+“学姐在读哪本书？”
+
+听到我的问题，学姐将封面转了过来。是雷蒙德·卡佛的《Les Débutants》。
+
+“这本书最初出版的名字，其实是这个。”
+
+她又拿出手机，操作了两下，随后示意我看向屏幕。
+
+“《De quoi parlons-nous quand nous parlons d'Amour》？好长的名字。”
+
+看来十几年前开始被拉长的轻小说书名，也并非毫无传统。
+
+“出版商从古至今都是一个样子，比如丹尼尔·笛福的那本漂流小说的第一版标题就有三百多个英文单词。”
+
+“与其说是小说标题，还不如说是<ruby><rb>摘要</rb><rt>Abstract</rt></ruby>吧？”
+
+“毕竟要让读者第一眼就知道这本书讲了什么嘛。雨宫同学看的是什么书？”
+
+学姐这时注意到了我手上的那本《Le Dernier des Tsars》。我回答道：
+
+“历史研究类的著作。我对世界史相关的书比较有兴趣。不过，读这类书的时候脑子里总得想象一副地图，所以也不是什么很轻松的事。”
+
+“你打算买这本吗？”
+
+我摇摇头。对我而言，很多书只要读懂大致的意思就够了，最多也就是购买电子版，如果把所有感兴趣的书都买一套纸质版带回去，未免太占空间。
+
+“真遗憾呢。我倒是有本书想买，不过没有在书架上找到。回去吧。”
+
+我们将各自手中的书放回原位后，便向书店的门口走去。
