--- a/vol1/01-20.md
+++ b/vol1/01-20.md
@@ -1,4 +1,4 @@
-## #20 «It is ME that HOPES the FAMILY can CONTINUE TO EXIST.»
+## #20 «IT is ME that HOPES the FAMILY can CONTINUE to EXIST.»
 
 我在便利店里买了一罐咖啡和两根能量棒。
 
