--- a/vol1/01-21.md
+++ b/vol1/01-21.md
@@ -4,6 +4,8 @@
 
 SIDE：みゆき
 
+&emsp;
+
 “みゆき，你看那边。”
 
 我和さやか吃完午饭后，沿着天桥返回主教学楼。这时，さやか突然抓住了我的手，示意我向她指的方向看去。
@@ -44,4 +46,4 @@ SIDE：みゆき
 
 ——不，不对。从新学期的第一天，我在图书馆看到雨宫同学的那一刻起，我大概就已经喜欢上他了。
 
-他的相貌大致还算得上整洁。但俘获我的心的，并不是他的相貌，而是他的声音。
+他的相貌大致还算得上整洁。但俘获我的心的，并不是他的相貌，而是**他的声音**。
