--- a/vol1/01-21.md
+++ b/vol1/01-21.md
@@ -4,6 +4,8 @@
 
 SIDE：みゆき
 
+&emsp;
+
 “みゆき，你看那边。”
 
 我和さやか吃完午饭后，沿着天桥返回主教学楼。这时，さやか突然抓住了我的手，示意我向她指的方向看去。
@@ -47,3 +49,22 @@ SIDE：みゆき
 他的相貌大致还算得上整洁。但俘获我的心的，并不是他的相貌，而是**他的声音**。
 
 每当雨宫同学说出一个字，都会如同月球的引力带来的潮汐现象一般，让我心跳加速。
+
+“你们要找的是雨宫吗？他下午请假了。”
+
+从教室中传来的男生声音打断了我的思考。我之前见过那个男生，应该是一年A班的学级委员。
+
+回过神来的时候，我已经脱口而出：
+
+“发生什么事了吗？”
+
+男生迟疑了一下才向我回答：
+
+“两位学姐，可以单独找个地方说话吗？”
+
+“嗯，拜托你了。”
+
+さやか看了看我的脸，随后向那个男生示意了一下，我们三人就这样离开一年A班，向电梯的方向走去。
+
+&emsp;
+
