--- a/vol1/01-21.md
+++ b/vol1/01-21.md
@@ -64,7 +64,23 @@ SIDE：みゆき
 
 “嗯，拜托你了。”
 
-さやか看了看我的脸，随后向那个男生示意了一下，我们三人就这样离开一年A班，向电梯的方向走去。
+さやか看了看我的脸，随后向那个男生示意了一下，我们三人就这样离开一年A班，向应急楼梯的方向走去。
 
 &emsp;
+
+“我妈找雨宫有事，所以他托我请半天的假。”
+
+刚一走到应急楼梯，这位姓工藤的男生就抛出了让我意想不到的内容。
+
+“工藤同学的……母亲吗？”
+
+“对，我妈是律师。之前接到雨宫的父母的委托，处理财产分割和抚养权等一系列事项。由于其中的一部分内容需要雨宫本人确认，所以我妈才要把他叫过去。”
+
+财产分割和抚养权——“离婚”这个词一瞬间在我的脑海中闪现。
+
+“雨宫同学的父母……离婚了吗？”
+
+听到我的问题，工藤同学露出了略显为难的表情。
+
+“我妈说她也是头一次遇到雨宫父母这样的情况，虽然两边都非常配合，但查阅相关的文件还是花了不少时间。更具体的我妈就没有讲了，毕竟她说的这点内容已经够让我摸不着头脑。”
 
