--- a/vol1/01-21.md
+++ b/vol1/01-21.md
@@ -30,7 +30,7 @@ SIDE：みゆき
 
 “我们去他的班上问一下吧。”
 
-我很难想象，雨宫同学会为了拿文件资料而特地请假。所以，我决定到他的班级找他的同学问一问情况。
+我很难想象，雨宫同学会为了拿文件资料而特地请假。所以，我决定过一会到他的班级，找他的同学问一问情况。
 
 &emsp;
 
@@ -83,4 +83,34 @@ SIDE：みゆき
 听到我的问题，工藤同学露出了略显为难的表情。
 
 “我妈说她也是头一次遇到雨宫父母这样的情况，虽然两边都非常配合，但查阅相关的文件还是花了不少时间。更具体的我妈就没有讲了，毕竟她说的这点内容已经够让我摸不着头脑。”
+
+听完这段话的我一时间不知该怎样开口。雨宫同学的家庭状况，复杂到超出常人能理解的程度——我只能得出这样的结论。
+
+回想起来，半个月前雨宫同学发高烧的时候，曾经向我提到过家里的一些事。对于在和睦的家庭中长大的我而言，很难想象雨宫同学在这近乎窒息的环境中的生活——就像水中的鱼难以想象没有了水的生活一样。
+
+“不好意思，大中午的把工藤同学你叫出来，却是问别的男生的事。”
+
+听到さやか的声音，工藤同学摇了摇头：
+
+“哪里的事。不过，今天从早上开始，雨宫的脸色就很不好——大概家里的事他早就清楚了吧。”
+
+“就算这样……”
+
+——就算这样，直面自己父母离婚的事实，雨宫同学还是会觉得很难受吧。
+
+这句话刚说出一半，我就停住了嘴。我只不过是个爱多管闲事的学姐，哪有什么资格关心雨宫同学的想法呢？
+
+“渡边学姐，怎么了？”
+
+“不，没什么。马上要上课了，我们先回去吧，さやか。”
+
+“嗯。工藤同学，非常感谢。”
+
+“我这边才是。”
+
+我们互相点了点头，随后各自走上了返回教室的路。
+
+&emsp;
+
+回到教室之后，我一直迟疑着要不要给雨宫同学发消息。更具体地说，是在为要发什么内容过去而迟疑。
 
