--- a/vol1/01-21.md
+++ b/vol1/01-21.md
@@ -112,5 +112,18 @@ SIDE：みゆき
 
 &emsp;
 
-回到教室之后，我一直迟疑着要不要给雨宫同学发消息。更具体地说，是在为要发什么内容过去而迟疑。
+回到教室之后，我一直迟疑着要不要给雨宫同学发消息。
 
+如果问他现在的情况，大概只会收到他不痛不痒的回复。
+
+如果问他家里发生了什么，大概又会对他产生精神上的二次伤害。
+
+如果随便找个无关紧要的话题——我想问问他有没有收到书店的回复，却想起昨天店员说“过一个星期左右才会到货”，这个问题大概只会惹来他那“学姐你是笨蛋吗”的取笑。
+
+我不断在手机上编辑着消息，又将写好的内容删掉。如此反复而犹豫不决的结果，便是最后我只发了一句非常短的话。
+
+【snowsee: 你还好吗？】
+
+上课的铃声响起，我匆忙收起手机。
+
+下午的第一节课是我最不擅长的物理，我完全没有心情听课，只盼望着下课铃声早一分钟响起。
