--- a/vol1/01-21.md
+++ b/vol1/01-21.md
@@ -124,6 +124,10 @@ SIDE：みゆき
 
 【snowsee: 你还好吗？】
 
-上课的铃声响起，我匆忙收起手机。
+上课的铃声响起，我匆忙将手机收进书包。
 
-下午的第一节课是我最不擅长的物理，我完全没有心情听课，只盼望着下课铃声早一分钟响起。
+下午的第一节课是我最不擅长的物理，而此时的我，已经完全没了听课的心情。
+
+不知道过了多久，书包似乎震动了一下。大概是雨宫同学发来了消息——这让我内心盼望着下课铃声能早一分钟响起。
+
+
