--- a/vol1/01-21.md
+++ b/vol1/01-21.md
@@ -1,7 +1,5 @@
 ### #21 «Hauptbahnhof Gleis 4-B»
 
-&emsp;
-
 SIDE：みゆき
 
 &emsp;
@@ -124,10 +122,40 @@ SIDE：みゆき
 
 【snowsee: 你还好吗？】
 
-上课的铃声响起，我匆忙将手机收进书包。
+老师走进了教室，我匆忙将手机收进书包。
 
-下午的第一节课是我最不擅长的物理，而此时的我，已经完全没了听课的心情。
+下午开始的第五节课是我最不擅长的物理，而此时的我，已经完全没了听课的心情。
 
 不知道过了多久，书包似乎震动了一下。大概是雨宫同学发来了消息——这让我内心盼望着下课铃声能早一分钟响起。
+
+下课铃声刚一响，我就将手机拿了出来。上面只有一条简洁而揪心的话。
+
+【MSK: 很不好】
+
+我飞快编辑着消息。
+
+【snowsee: 你现在在哪？】
+
+过了一分钟多一点，雨宫同学发来了回复。
+
+【MSK: Hauptbahnhof】
+
+【MSK: Gleis 4-B】
+
+Hauptbahnhof……我记得昨天雨宫同学提到市中心有大量以德语标识的地名，赶紧用在线翻译查了一下，确认Hauptbahnhof指的是“火车总站”，而Gleis……应该是“站台”的意思。
+
+【snowsee: 我放学之后去找你】
+
+【snowsee: 在那里等我，好不好？】
+
+我死死盯着手机屏幕，直到第六节课的铃声响起的那一刻，才终于看到了回复。
+
+【MSK: 嗯。】
+
+这时，我才松了一口气。至少到我去火车站的这段时间里，雨宫同学应该不会再做出什么难以挽回的事情。
+
+&emsp;
+
+
 
 
