--- a/vol1/01-21.md
+++ b/vol1/01-21.md
@@ -46,7 +46,7 @@ SIDE：みゆき
 
 ——不，不对。从新学期的第一天，我在图书馆看到雨宫同学的那一刻起，我大概就已经喜欢上他了。
 
-他的相貌大致还算得上整洁。但俘获我的心的，并不是他的相貌，而是**他的声音**。
+他的相貌大致还算得上干净。但俘获我的心的，并不是他的相貌，而是**他的声音**。
 
 每当雨宫同学说出一个字，都会如同月球的引力带来的潮汐现象一般，让我心跳加速。
 
