--- a/vol1/01-22.md
+++ b/vol1/01-22.md
@@ -185,9 +185,9 @@ SIDE: 政樹
 
 这句话让我如遭雷击，根本没有心思再听后面的内容。
 
-虽然我在书中看到过无数恋爱故事，也在中学时偶然看到过一些告白的场景，但“喜欢”这个词落到我的头上，却还是第一次。
+虽然我在书中看到过无数恋爱故事，也在中学时偶然看到过学生之间的告白，但“喜欢”这个词落到我的头上，却还是第一次。
 
-我甚至无法在自己脑海中的知识库里，找到任何一个与此时此刻类似的恋爱故事。
+我甚至无法在自己脑海中的知识库里，找到任何一个与此时此刻类似的场景。
 
 ——不，不对。
 
