--- a/vol1/01-03.md
+++ b/vol1/01-03.md
@@ -121,3 +121,5 @@
 三步并作两步的我穿过房门，猫着腰轻声冲上楼梯，转动把手将门推开。
 
 从图书馆一侧的门进入通向这个房间的楼梯前看到的，那个趴在桌子上睡觉的少女，就这样出现在我的面前。
+
+[Prev](01-02.md) [Index](../index.md) [Next](01-04.md)
