--- a/vol1/01-04.md
+++ b/vol1/01-04.md
@@ -139,3 +139,5 @@ snowsee。
 门被轻轻关上的咔嚓声传到我的耳边。又过了半分钟，更为轻微的咔嚓声从头顶略偏斜前方处传来。
 
 恢复了寂静的房间，就如同从未有人造访过一样。
+
+[Prev](01-03.md) [Index](../index.md) [Next](01-04.md)
