--- a/vol1/01-05.md
+++ b/vol1/01-05.md
@@ -1,5 +1,7 @@
 ### #05 Dormoĉambro
 
+&emsp;
+
 渡边学姐走后，我一直干坐到了五点钟，才提起书包走出房间，关好门后又顺着楼梯上楼。正当我眯着眼睛观察门缝另一边状况的时候，才发现自己漏了一件事。
 
 ——忘了把制服夹克从渡边学姐那要回来了。
@@ -170,3 +172,5 @@
 “之后的话就……”
 
 随后，我对工藤讲出了自己准备实行的计划。
+
+[Prev](01-04.md) [Index](../index.md) [Next](01-06.md)
