--- a/vol1/01-06.md
+++ b/vol1/01-06.md
@@ -1,5 +1,7 @@
 ### #06 Elekto de la Klasaj Reprezentantoj
 
+&emsp;
+
 “那么，昨天我也说过了，今天要决定各个委员的人选。先从学级委员开始。”
 
 第三节课。讲完了这一学年的大致要点后，菅田老师对着整个教室说道。
@@ -157,3 +159,5 @@
 那是一个耳熟能详却又陌生至极的声音——不，我知道那是谁的声音。
 
 那是<ruby><rb>**我**</rb><rt>わたし</rt></ruby>的声音。
+
+[Prev](01-05.md) [Index](../index.md) [Next](01-07.md)
