--- a/vol1/01-07.md
+++ b/vol1/01-07.md
@@ -1,5 +1,7 @@
 ### #07 La «Libroknabino» kaj Emily J. Brontë
 
+&emsp;
+
 【MSK：不好意思，请问我的制服外套是否还在学姐手上？】
 
 【snowsee：啊，我都忘了这事了。】
@@ -143,3 +145,5 @@
 我向渡边学姐微笑了一下，随后拿起身旁的书包，将制服披在身上。
 
 抬头看去，窗外的天空已经染上了淡淡的橙色——那是宛如《Le Soleil Couchant》一般的光景。
+
+[Prev](01-06.md) [Index](../index.md) [Next](01-08.md)
