--- a/vol1/01-08.md
+++ b/vol1/01-08.md
@@ -1,5 +1,7 @@
 ### #08 Kritiko kaj Dubo 
 
+&emsp;
+
 我将从图书馆借来的《La Fille du Livre》前四卷放在书桌上后，启动面前的黑色笔记本电脑，准备查询一下这部作品相关的资料信息。
 
 这台笔记本电脑是**那个男人**听说我考入这所学校之后，从不知道什么地方翻出来叫我拿去用的。刚拿到这台笔记本的时候我还为其居然是4：3的屏幕而震惊，但启动进入系统后，却发现硬件配置意外地还不错。
@@ -161,3 +163,5 @@
 大概是脑子里想事情想多了吧。我现在也没心情把淋湿的衬衫丢去洗衣房，于是随便找了件T恤衫换上后，倒在床上闭上了眼睛。
 
 至于炒面和薯片——那就等醒过来再说。伴随着止不住的头疼，意识以蚂蚁一般的速度逐渐远去。
+
+[Prev](01-07.md) [Index](../index.md) [Next](01-09.md)
