--- a/vol1/01-01.md
+++ b/vol1/01-01.md
@@ -1,5 +1,7 @@
 ## Chapitro.01 市長と捜査官と緑の帽子を被る男
 
+&emsp;
+
 ### #01 Hejmo de Silento: «Bagne de Toulon»
 
 &emsp;
@@ -144,5 +146,6 @@
 
 短暂的表面功夫（互相试探）结束后，我走进更衣室换好制服，提着书包出来——此时我想起自己应该把**那本小说**带到宿舍去读，于是从客厅的书架上抽下4册文库本塞进书包，又将礼盒也一并带上，这才离开公寓，将门关好，向前方的电梯走去。
 
+&emsp;
 
 [Prev](00-prologue.md) [Index](../index.md) [Next](01-02.md)
