--- a/vol1/01-02.md
+++ b/vol1/01-02.md
@@ -4,7 +4,7 @@
 
 《Universität Tendou angeschlossene Schule》。
 
-——教学楼主入口的正上方，写着一串看上去像是德语的文字。
+——教学楼主入口的正上方，写着一串应该是德语的文字。
 
 搭乘电车在学校前的车站下车后，通过自动扶梯进入天桥，再刷学生卡通过闸机，又从天桥一端走到另一端的我，如今就站在这串文字的前面。
 
@@ -195,5 +195,7 @@
 闭上双眼，深吸一口气后，我从座位上站起，开始为期三年的伪装计划。
 
 “各位同学大家好。我的名字是雨宫政树……”
+
+&emsp;
 
 [Prev](01-01.md) [Index](../index.md) [Next](01-03.md)
