--- a/vol1/01-09.md
+++ b/vol1/01-09.md
@@ -1,5 +1,7 @@
 ### #09 Alta Febro
 
+&emsp;
+
 ——甚至连无视这帮多嘴多舌的四十岁欧巴桑们，只是将面前的食物塞进胃里这件事，对我来讲都宛如一场奢望。
 
 当我拖着不知为何疲惫不堪的身体坐电车赶到餐厅的时候，发现唯并不在这里。按那个女人的说法，似乎是和<ruby><rb>柏原琴美</rb><rt>Kashiwabara Kotomi</rt></ruby>阿姨的女儿<ruby><rb>千夏</rb><rt>Chika</rt></ruby>——也是唯在中等部的学姐——一起出去了。随后我跟着那个女人走进餐厅，被她安排坐在自己和琴美阿姨中间的位置。
@@ -131,3 +133,7 @@
 【MSK: 抱歉麻烦你了】
 
 意识在消息发送的过程中一点点模糊起来。我翻了个身，让自己面向一边的墙壁，任由手机滑落在地面上。
+
+&emsp;
+
+[Prev](01-08.md) [Index](../index.md) [Next](01-10.md)
