--- a/vol1/01-10.md
+++ b/vol1/01-10.md
@@ -1,5 +1,7 @@
 ### #10 Vizitante la Pacienton
 
+&emsp;
+
 正当百无聊赖的我在手机上交替翻阅着《Les Misérables》的法语版和翻译版进行对比阅读的时候，突然弹出了一条Linie消息的通知。
 
 消息是渡边学姐发来的。
@@ -307,3 +309,7 @@
 “好啊。”
 
 接下来的几分钟里，我们就这样等待着护士的到来。
+
+&emsp;
+
+[Prev](01-09.md) [Index](../index.md) [Next](01-11.md)
