--- a/vol1/01-11.md
+++ b/vol1/01-11.md
@@ -1,5 +1,7 @@
 ### #11 Mi ne rapidas pri Kurado.
 
+&emsp;
+
 “身高156cm，体重……42kg。”
 
 听到老师报出的数字后，我退后一步回头，恰好看到了工藤。
@@ -147,3 +149,7 @@
 **我只是逃的很快罢了**。
 
 往返跑的测试还有一段时间才会开始。我一边坐下来休息，一边看着下一波走向起跑线的学生。
+
+&emsp;
+
+[Prev](01-10.md) [Index](../index.md) [Next](01-12.md)
