--- a/vol1/01-12.md
+++ b/vol1/01-12.md
@@ -1,5 +1,7 @@
 ### #12 En Studenta Konsilio 1
 
+&emsp;
+
 星期五的放学后。
 
 收拾好书包的我准备走出教室后再联系渡边学姐会合前往诊所，却发现她早就已经在走廊上等着了。与她在一起的，还有另一位二年级的学姐。
@@ -213,3 +215,7 @@
 <ruby><rb>朝仓</rb><rt>Asakura</rt></ruby><ruby><rb>遥香</rb><rt>Haruka</rt></ruby>女士——这个名字是我后来知道的——大概的确已经死了。
 
 而此时此刻的我，也只不过将这当成日常生活中随处可见的一个事件而已。
+
+&emsp;
+
+[Prev](01-11.md) [Index](../index.md) [Next](01-13.md)
