--- a/vol1/01-13.md
+++ b/vol1/01-13.md
@@ -1,5 +1,7 @@
 ### #13 La aŭtoro kiu miskomprenis «La Porte Étroite»
 
+&emsp;
+
 “那么雨宫同学，你之前给我发消息，说对《La Fille du Livre》最后两卷有自己的看法。具体来说是怎么样呢？”
 
 我和渡边学姐分坐在小餐厅一角的餐桌两旁——恰巧和两星期前同样的位置。
@@ -182,3 +184,6 @@
 
 “在我眼中这样的编辑甚至不如某头牌文库的前任总编。毕竟那位总编可是说了『只要有趣的话什么都可以』——他大概会非常赏识《La Fille du Livre》中主人公的那位青梅竹马写出来的故事。因为它们足够有趣。再回到《La Fille du Livre》本身，纪德在《La Porte Étroite》中塑造的，是一个为了把握「自我」而放弃爱情的阿丽莎；而《La Fille du Livre》的女主人公最终选择的是牺牲「自我」。两者看上去很像，但本质却完全相反。到了这一步，只能说《La Fille du Livre》的最后两卷和它试图致敬的《La Porte Étroite》根本就是毫无关联的两个东西。作者没能在这两卷做到概念上的「完美」。面对纪德在《La Porte Étroite》中向观众抛出的问题，她没有给出一份合格的答卷。”
 
+&emsp;
+
+[Prev](01-12.md) [Index](../index.md) [Next](01-14.md)
