--- a/vol1/01-14.md
+++ b/vol1/01-14.md
@@ -1,5 +1,7 @@
 ### #14 Kontrapunkto sub la Akvo
 
+&emsp;
+
 从小餐厅返回宿舍的路上，我一直在思考渡边学姐对《La Fille du Livre》的最后两卷及其致敬的《La Porte Étroite》之间关系的评论。
 
 ——两个故事中的女主人公看上去都放弃了自己的“恋爱”，但选择的方向却完全相反。
@@ -255,3 +257,7 @@ III-3-d。
 不需要再呆在这里了。书店也不必再去了。
 
 下定决心的我转过身，以**和来时一样不紧不慢**的步伐向中央广场上通向电车站的地下通道入口方向走去。
+
+&emsp;
+
+[Prev](01-13.md) [Index](../index.md) [Next](01-15.md)
