--- a/vol1/01-17.md
+++ b/vol1/01-17.md
@@ -1,5 +1,7 @@
 ### #17 Librejo 1
 
+&emsp;
+
 “雨宫同学你这么能吃的？”
 
 “只是有点饿了而已。倒是学姐你点了这么多，就不怕吃不下吗？”
@@ -151,3 +153,7 @@
 “真遗憾呢。我倒是有本书想买，不过没有在书架上找到。回去吧。”
 
 我们将各自手中的书放回原位后，便向书店的门口走去。
+
+&emsp;
+
+[Prev](01-16.md) [Index](../index.md) [Next](01-18.md)
