--- a/vol1/01-18.md
+++ b/vol1/01-18.md
@@ -1,5 +1,7 @@
 ## #18 La mankanta Libro de Mari
 
+&emsp;
+
 从书店出来的时候，渡边学姐突然被摆在橱窗中的一本书吸引了视线，停下了脚步。我走到橱窗旁边，指着那本书问道：
 
 “玛丽的《La Pauvreté de Luxe》——学姐，你看的是这本对吧？”
@@ -163,3 +165,7 @@
 “我期待你的指导哦。”
 
 学姐丢给我一个wink，随后走进宿舍楼，消失在我的视野之中。我转过头，向天桥另一端与地面相连的楼梯走去。
+
+&emsp;
+
+[Prev](01-17.md) [Index](../index.md) [Next](01-19.md)
