--- a/vol1/01-19.md
+++ b/vol1/01-19.md
@@ -1,5 +1,7 @@
 ## #19 Sciigo pri «Eksedziĝo»
 
+&emsp;
+
 将双肩包随手丢在桌上的我，整个人倒在了床上。虽说和渡边学姐一起外出让我觉得很开心，但一路走下来体力也消耗了不少。
 
 手机上显示的时间是下午4点15分。说起来我在送学姐回去时候和她约定好后天给她补习，虽说高中数学和理科的知识点我基本都掌握了，但细节内容还需要看书回想才行。还是联络一下那个女人，回家拿一下当年她用过的教材吧。
@@ -181,3 +183,7 @@
 铃声响起，菅田老师走了进来。我们慌忙端正坐姿，等待着HR的开始。
 
 然而，这之后一上午的课程，我都已经记不起老师们具体讲了什么。虽然在回答问题的时候仍然能流畅相对，但这只是我根据脑海中的数据自行作出的反应而已。
+
+&emsp;
+
+[Prev](01-18.md) [Index](../index.md) [Next](01-20.md)
