--- a/vol1/01-22.md
+++ b/vol1/01-22.md
@@ -1,6 +1,5 @@
 ### #22 Declaro de Amo
 
-
 &emsp;
 
 SIDE: 政樹
@@ -197,3 +196,6 @@ SIDE: 政樹
 
 ——**<ruby><rb>您自由了</rb><rt>Vous êtes libre</rt><ruby>**。
 
+&emsp;
+
+[Prev](01-21.md) [Index](../index.md)
