--- a/vol1/01-23.md
+++ b/vol1/01-23.md
@@ -74,7 +74,7 @@ SIDE：みゆき
 
 泪水宛如要夺眶而出，我不由得用双手捂住了脸。
 
-“<ruby><rb>都交给你——渡边みゆき学姐</rb><rt>あなた——渡邊みゆきに差し上げます</rt></ruby>。<ruby><rb>从此时此地，直到永远</rb><rt>今ここから、未来永劫まで</rt></ruby>。”
+“<ruby><rb>都交给你——渡边みゆき学姐</rb><rt>あなた——渡邊みゆき先輩に差し上げます</rt></ruby>。<ruby><rb>从此时此地，直到永远</rb><rt>今ここから、未来永劫まで</rt></ruby>。”
 
 意料之外的话语，让我不禁抬起了头。
 
