--- a/vol1/01-23.md
+++ b/vol1/01-23.md
@@ -72,11 +72,25 @@ SIDE：みゆき
 
 “<ruby><rb>将会把自己的一切</rb><rt>この自分のすべてを</rt></ruby>——”
 
-泪水宛如要夺眶而出，我不由得用双手捂住了脸。
+泪水宛如要夺眶而出的我，不由得用双手捂住了脸。
 
-“<ruby><rb>都交给你——渡边みゆき学姐</rb><rt>あなた——渡邊みゆき先輩に差し上げます</rt></ruby>。<ruby><rb>从此时此地，直到永远</rb><rt>今ここから、未来永劫まで</rt></ruby>。”
+“<ruby><rb>都交给你——渡边みゆき学姐</rb><rt>あなた——渡邊みゆきに差し上げます</rt></ruby>。<ruby><rb>从此时此地，直到永远</rb><rt>今ここから、未来永劫まで</rt></ruby>。”
 
 意料之外的话语，让我不禁抬起了头。
 
-我——这是在做梦吗？
+我——这是在做梦吗？雨宫同学——接受了我的告白？
+
+然而，他的话还在继续：
+
+“<ruby><rb>大概我出生以来，还是第一次被人喜欢上吧</rb><rt>『好き』だと言われたのは、生まれてから初めてだったかも知らない</rt></ruby>。<ruby><rb>所以，我很开心</rb><rt>だから、わたしは凄く嬉しい</rt></ruby>。”
+
+雨宫同学停顿了一下，说出了最后的话：
+
+“<ruby><rb>谢谢你，选择了我</rb><rt>選んでくれて、ありがとう</rt></ruby>。”
+
+“雨宫同学，你这是在……哭吗？”
+
+听到我的问题，他露出了惊讶的神色，似乎完全没有意识到自己眼中已满是泪水。
+
+“啊……我居然，还会，哭吗……？”
 
