--- a/vol1/01-23.md
+++ b/vol1/01-23.md
@@ -86,7 +86,7 @@ SIDE：みゆき
 
 雨宫同学停顿了一下，说出了最后的话：
 
-“<ruby><rb>谢谢你，选择了我</rb><rt>選んでくれて、ありがとう</rt></ruby>。”
+“<ruby><rb>渡边学姐……我喜欢你</rb><rt>渡邊先輩……わたしは、あなたが好きです</rt></ruby>。<ruby><rb>还有……</rb><rt>そして……</rt></ruby><ruby><rb>谢谢你，选择了我</rb><rt>選んでくれて、ありがとう</rt></ruby>。”
 
 “雨宫同学，你这是在……哭吗？”
 
