--- a/vol1/01-23.md
+++ b/vol1/01-23.md
@@ -100,3 +100,39 @@ SIDE：みゆき
 
 &emsp;
 
+“……下雨了呢。”
+
+当我们通过电梯进入地下通道，又穿过火车站的大厅走到站前广场的时候，才发现外面已经淅淅沥沥地下起了雨。
+
+“みゆき带伞了吗？”
+
+“折叠伞倒是带了一把……等等。雨宫同学你怎么突然直接叫我名字了？”
+
+“正在交往的恋人难道不都是这样的吗？みゆき也可以直接叫我的名字啊。”
+
+雨宫同学的回答，让我不由得有点脸颊发烫。我的确在**独处**的时候叫过他的名字，但这种事打死我都不会在他的面前说出来。
+
+——不对。反正都是恋人了，迟早会曝光的吧。到时候再说好了。
+
+我一边想着无关紧要的内容，一边反驳：
+
+“一上来就直接叫名字还是太跳跃性了吧。”
+
+听到我的话，雨宫同学反过来问道：
+
+“那学姐想要我怎么称呼呢？……嗯，比如学姐的家人平常是怎么称呼你的？”
+
+“爸爸和妈妈的话，一般叫我《ユキ》。”
+
+“那我叫你《ユキ姉》好了，反正我们差两岁嘛。”
+
+他后面讲出的内容，这让我不禁有些诧异。
+
+“两岁？这是怎么回事？”
+
+雨宫同学迟疑了一下回答：
+
+“那个女人似乎通过什么台面下的手段，让我提前一年上了学。如果ユキ姉不信的话，可以看我的出生证明。”
+
+随后他从书包中拿出一个文件袋，从中抽出一张有着蓝色纹样的纸递给了我。
+
