--- a/vol1/01-23.md
+++ b/vol1/01-23.md
@@ -102,7 +102,7 @@ SIDE：みゆき
 
 “……下雨了呢。”
 
-当我们通过电梯进入地下通道，又穿过火车站的大厅走到站前广场的时候，才发现外面已经淅淅沥沥地下起了雨。
+当我们通过电梯进入地下通道，又穿过火车站的大厅走到门口的时候，才发现外面已经淅淅沥沥地下起了雨。
 
 “みゆき带伞了吗？”
 
@@ -136,3 +136,86 @@ SIDE：みゆき
 
 随后他从书包中拿出一个文件袋，从中抽出一张有着蓝色纹样的纸递给了我。
 
+MASAKI AMAMIYA。09-23-××××。
+
+这哪里是差了两岁，明明是两岁半——我突然产生了一种自己在犯罪的感觉。然而——
+
+年龄什么的很有所谓吗？
+
+潜藏于我心中的小恶魔却兴奋着。
+
+没错，我并不是喜欢年下的男生，只是自己喜欢的人恰好是年下而已。
+
+鬼使神差之下，将出生证明还给雨宫同学的我说出了近乎调戏的内容：
+
+“你刚才说会把自己的一切都交给我……”
+
+“对，怎么了？”
+
+“可是有两样东西你已经交不出来了呢。”
+
+“哪两样？”
+
+脸颊有点发红。真希望他没有看出来。
+
+“初吻和处男。”
+
+雨宫同学怔了一下，随后叹了口气回答：
+
+“倒也是呢。怎么，ユキ姉对我的身体这么有兴趣？”
+
+我凑到他的耳边，以只有我们两人能听清的音量低声说道：
+
+“我可是现在就想听到你娇喘的声音啊。”
+
+回过神来，才发现他的耳垂已经通红了。
+
+“呜哇……雨宫同学你这个样子好可爱。”
+
+“吵死了。还有，ユキ姉用姓氏称呼我是几个意思啊？”
+
+“我不都说了，直接叫名字太跳跃性了吗？”
+
+听到我这句话，雨宫同学陷入了思考。过了一会，他拿出手机，在我的面前启动了便签本的程序，又在上面输入了“Amamiya”这个词。
+
+随后，他调出输入法，将后面的a、i、a三个字母删掉，剩下的字母是——
+
+Ammy。
+
+“エミー？有点像女孩子的名字呢。”
+
+“ユキ姉上次在笔记本上画我的时候，不也是把我画成女孩子了吗？我觉得这个称呼还挺不错的。”
+
+“好啊。请多指教，エミー。”
+
+“这边才是吧，ユキ姉。”
+
+四目相对的我们各自微笑了一下后，我从书包中拿出折叠伞，交给了雨宫同学——不，应该是エミー。随后，我们便走到了火车站外的石板路上。
+
+“说起来，ユキ姉是想现在就去情人旅馆，还是先吃点什么再去？”
+
+“先吃点东西吧。エミー中午有吃过什么吗？”
+
+“我只吃了两根能量棒，喝了一罐咖啡。再就是在MgDonald吃了一份MgNuggets，一小份薯条和一杯可乐。”
+
+听到如此简陋的午餐配置，我不由得吐槽道：
+
+“那还不赶紧吃点东西。没有体力的话要怎么做啊？”
+
+“ユキ姉有什么想吃的吗？”
+
+“エミー有什么想吃的吗？”
+
+“我还真不太知道……”
+
+一阵尴尬的沉默中，我们又往前走了一段路。这时，Сайзьрыя的招牌映入了我的视野。
+
+“要么去那边吧？”
+
+“也行啊。就当填饱肚子好了。”
+
+“不要**吃太多**哦，否则一会可就难受了。”
+
+“知道了啦。”
+
+我摸了摸露出苦笑的エミー的头，随后一起走向Сайзьрыя的入口。
