--- a/vol1/01-22.md
+++ b/vol1/01-22.md
@@ -194,7 +194,7 @@ SIDE: 政樹
 
 &emsp;
 
-——**<ruby><rb>您自由了</rb><rt>Vous êtes libre</rt><ruby>**。
+——**<ruby><rb>您自由了</rb><rt>Vous êtes libre</rt></ruby>**。
 
 &emsp;
 
