--- a/vol1/01-24.md
+++ b/vol1/01-24.md
@@ -110,3 +110,23 @@
 
 Oka〇to啊……我看向安全套盒子的包装。说起来，这次用的安全套戴上去的时候很花了我一番功夫，下次还是换个款式好了。
 
+我稍微读了下开头，便将手机递了回去。
+
+“我总觉得这个故事的主人公有点像……嗯……男魅魔吧？虽然也只是第一印象。”
+
+“男魅魔什么的，姐姐我身边可就有一个哦。”
+
+“吵死了啦。”
+
+难以言说的羞耻心突然冒了出来。然而，看到我这个样子的ユキ姉却露出了相当满足的表情：
+
+“昨天用那么魅惑的声音在我耳边说话的人是不是你啊，**政树**？”
+
+“喂！”
+
+这的确是事实。昨晚**做**的时候我不由自主地想要用自己能用上的一切手段——也许相当笨拙——为ユキ姉提供服务，与此相对的，自己的身体也相当满足，被ユキ姉**直接用名字称呼**的时候，甚至会产生额外的兴奋感。
+
+——大概以后也只有**做不了**的日子里，才会选择用一个人做的办法发散性欲了吧。
+
+&emsp;
+
