--- a/vol1/01-24.md
+++ b/vol1/01-24.md
@@ -118,7 +118,7 @@ Oka〇to啊……我看向安全套盒子的包装。说起来，这次用的安
 
 “吵死了啦。”
 
-难以言说的羞耻心突然冒了出来。然而，看到我这个样子的ユキ姉却露出了相当满足的表情：
+难以言说的羞耻心突然冒了出来。然而，看到我这个样子的ユキ姉却以愉悦的口气问道：
 
 “昨天用那么魅惑的声音在我耳边说话的人是不是你啊，**政树**？”
 
