--- a/vol1/01-24.md
+++ b/vol1/01-24.md
@@ -126,7 +126,7 @@ Oka〇to啊……我看向安全套盒子的包装。说起来，这次用的安
 
 这的确是事实。昨晚**做**的时候我不由自主地想要用自己能用上的一切手段——也许相当笨拙——为ユキ姉提供服务，与此相对的，自己的身体也相当满足，被ユキ姉**直接用名字称呼**的时候，甚至会产生额外的兴奋感。
 
-——大概以后也只有**做不了**的日子里，才会选择用一个人做的办法发散性欲了吧。
+——大概以后也只有**不能做**的日子里，才会通过一个人做的方式来发散性欲了吧。
 
 &emsp;
 
