--- a/vol1/01-24.md
+++ b/vol1/01-24.md
@@ -124,9 +124,52 @@ Oka〇to啊……我看向安全套盒子的包装。说起来，这次用的安
 
 “喂！”
 
-这的确是事实。昨晚**做**的时候我不由自主地想要用自己能用上的一切手段——也许相当笨拙——为ユキ姉提供服务，与此相对的，自己的身体也相当满足，被ユキ姉**直接用名字称呼**的时候，甚至会产生额外的兴奋感。
+这的确是事实。昨晚**做**的时候我不仅不断变换自己的声音，还以自己能用上的一切手段——也许相当笨拙——为ユキ姉提供服务。与此相对的，身体也相当满足，当被ユキ姉**直接用名字称呼**的时候，甚至会产生额外的兴奋感。
 
 ——大概以后也只有**不能做**的日子里，才会通过一个人做的方式来发散性欲了吧。
 
 &emsp;
 
+“SPH……左眼-3.75，右眼-3.50。CYL……左眼-1.00。”
+
+离开情人旅馆后，发现我的视线不太对头的ユキ姉，建议我去配一副眼睛。
+
+结果，一看到处方单上的数字，她的眉头就皱了起来。
+
+“都这个样子了，エミー你居然之前都不配眼镜的吗？”
+
+“在那个女人眼里，**我不需要戴眼镜**也是她想要在好友们面前显摆的一件事。至于我实际的视力如何，并不在她关心的范围之内。”
+
+听到我无奈的回答，ユキ姉陷入了沉默。过了一会，她才伸出右手，在我的脸颊上捏了一下。
+
+“真是的……这么说来，你平常吃饭也没人管的？”
+
+“没有。我平常的一日三餐都是随便应付一下的。”
+
+“简直让我怀疑你是怎么活到现在的了。要不要我搬到旧宿舍来照顾你啊？”
+
+一听到这句话，我下意识地反问道：
+
+“ユキ姉确定自己能把持得住吗？”
+
+“把持不住又怎么样？大不了轮流出钱买安全套吧。”
+
+“倒也是，毕竟不做好安全措施的话就麻烦大了。”
+
+我停顿了一下，在脑海中搜索旧宿舍的相关知识后继续说道：
+
+“没记错的话，黄金周一结束就会开放旧宿舍的入住申请。”
+
+“好啊。我会第一时间提交申请的。到时候请多指教啦。”
+
+看到ユキ姉开心的样子，我也微笑了一下作为回应。这时，眼镜店的店员走了过来，提醒我们将配好的眼镜取走。
+
+“我来付钱好了。”
+
+一听到ユキ姉的话，我慌忙制止了她。
+
+“不必了吧？”
+
+“就当我请你的好了。作为交换，一会你要跟我去一个地方。”
+
+&emsp;
