--- a/vol1/01-24.md
+++ b/vol1/01-24.md
@@ -173,3 +173,93 @@ Oka〇to啊……我看向安全套盒子的包装。说起来，这次用的安
 “就当我请你的好了。作为交换，一会你要跟我去一个地方。”
 
 &emsp;
+
+ユキ姉带我去的地方，是位于Kronos内部与电影院相对位置的卡拉OK包房。
+
+“是要我唱歌给你听吗？”
+
+面对我的提问，ユキ姉直截了当地回答：
+
+“对，有一首歌，想让你唱给我听。”
+
+随后她拿起选曲遥控器操作了两下，点了一首曲子。
+
+那是一部今年上映了最终作的剧场版动画的主题歌——去年12月，我曾在电影院中，看过前三部的重映版。
+
+当旋律响起的那一瞬间，我便不由自主地唱了出来。
+
+而此时，我也意识到了，为什么ユキ姉想让我唱这首歌——更准确的说，是意识到了ユキ姉想告诉我的话。
+
+——Si je peux être exaucé, juste un souhait
+
+——S'il tu plaît laissez-moi dormir à côté de tu
+
+——N'importe quel endroit est bien
+
+不知不觉间，泪水再一次从我的脸颊划过。
+
+“你的愿望，已经实现了哦。”
+
+我一边在内心自言自语着，一边继续唱着歌。
+
+——Sans regrets, mes yeux ne sont que sur toi
+
+“我知道哦，你一直在看着我。”
+
+——Tu ne sais pas encore, à quel point tu es belle
+
+“谢谢你，让我知道了自己真正想要的是什么。”
+
+我闭上眼睛，将自己全部的情感，化为萦绕KTV包房中的歌声。
+
+——Tu ne t'aimez pas?
+
+“现在的我，大概可以喜欢上自己了吧。”
+
+&emsp;
+
+当我睁开双眼的时候，看到的是屏幕上显示的分数——98分。转头看去，ユキ姉竟也和我一样泪流满面。
+
+“你怎么了……”
+
+“我……好开心。因为エミー唱的太好听了……”
+
+“好了好了。来，这是纸巾。”
+
+我从桌上抽出纸巾递给ユキ姉，随后摸了摸她的头。
+
+“还想听我继续唱吗？”
+
+“好啊。エミー还会唱哪些歌？”
+
+“我想想……”
+
+我低下头思考了一会，拿起遥控器又随意点了几首。之后的一个多小时，我就这样只为ユキ姉一个人而唱着歌。
+
+最后一首的评分显示在屏幕上时，ユキ姉突然问了一个问题。
+
+“要和我约定吗？”
+
+“什么约定？”
+
+听到我的问题，ユキ姉站起身，凑到我的耳边说道：
+
+“当我想听的时候，就给我唱歌好不好？”
+
+原来是这个吗——对我而言，这实在不是什么需要纠结的内容。
+
+“好啊。只要ユキ姉想听，我就给你唱。”
+
+随后我们拥抱在一起，交换了一个长长的吻。
+
+ユキ姉——从此以后，我大概会越来越喜欢上你吧。
+
+正因为和你在一起，我才有机会将伪装的自我，变成真实的自我。
+
+只要有你在身旁，哪怕我的内心仍在重复着自我质疑，但我也会努力让你越来越喜欢我。
+
+我在心中，立下了这样的决意。
+
+&emsp;
+
+[Prev](01-23.md) [Index](../index.md)
