--- a/vol1/01-24.md
+++ b/vol1/01-24.md
@@ -252,6 +252,12 @@ Oka〇to啊……我看向安全套盒子的包装。说起来，这次用的安
 
 随后我们拥抱在一起，交换了一个长长的吻。
 
+&emsp;
+
+——你会爱上这个<ruby><rb>天才</rb><rt>笨拙</rt></ruby>的<ruby><rb>我</rb><rt>わたし</rt></ruby>吗？
+
+也许，这个问题根本就不需要什么回答。
+
 ユキ姉——从此以后，我大概会越来越喜欢上你吧。
 
 正因为和你在一起，我才有机会将伪装的自我，变成真实的自我。
