--- a/vol1/01-12.md
+++ b/vol1/01-12.md
@@ -6,7 +6,7 @@
 
 收拾好书包的我准备走出教室后再联系渡边学姐会合前往诊所，却发现她早就已经在走廊上等着了。与她在一起的，还有另一位二年级的学姐。
 
-“你就是一年A班的雨宫同学吗？我叫黑泽さやか，是みゆき的同班同学。”
+“你就是一年A班的雨宫同学吗？我叫黑泽さやか，是みゆき的好友。”
 
 “嗯，我就是雨宫政树。请学姐多多指教。”
 
