--- a/vol1/01-24.md
+++ b/vol1/01-24.md
@@ -268,4 +268,4 @@ Oka〇to啊……我看向安全套盒子的包装。说起来，这次用的安
 
 &emsp;
 
-[Prev](01-23.md) [Index](../index.md)
+[Prev](01-23.md) [Index](../index.md) [Next](01-25-postscript.md)
