--- a/vol1/01-02.md
+++ b/vol1/01-02.md
@@ -158,9 +158,9 @@
 
 “这个姓柏原的……嗯？中等部？这个榜是高等部和中等部一起算的吗？”
 
-“当然是一起算的。柏原千夏（Kashiwabara Chika）……这个女生可不简单，没记错的话，应该是去年中等部的新生代表吧。第一学期的中期投票她就冲到了女生榜的第三名，从此牢牢占据着‘女王大人’和‘公主大人’之后的那个位置，学校里有不少人私下里都是用‘天使大人’来称呼她的。说起来，‘公主大人’今年可是被分到了我们班级啊。”
+“当然是一起算的。柏原千夏（Kashiwabara Chika）……这个女生可不简单，没记错的话，应该是去年中等部的新生代表吧。第一学期的中期投票她就冲到了女生榜的第三名，从此牢牢占据着‘女王大人’和‘公主大人’之后的那个位置。说起来，‘公主大人’今年可是被分到了我们班级啊。”
 
-“女王”、“公主”和“天使”……这帮学生还真够无聊的。我又扫了一眼工藤的手机，随后问道：
+“女王”和“公主”……这帮学生还真够无聊的。我又扫了一眼工藤的手机，随后问道：
 
 “‘公主大人’……嗯，名字是……森山真咲（Moriyama Masaki）？你说她在这个班？”
 
