--- a/vol1/01-02.md
+++ b/vol1/01-02.md
@@ -24,7 +24,7 @@
 
 “哪里哪里，家母曾对我说，多亏了您当年的教导，才有了现在的她。这份礼物也是她的一点敬意。”
 
-“政树你的这个作风，倒是和你母亲很像呢。对了，教导主任昨天到我这里送了一份高等部的分班表，你要不要看一下？”
+“政树你的这个作风，倒是和你母亲很像呢。对了，教务主任昨天到我这里送了一份高等部的分班表，你要不要看一下？”
 
 “那就恭敬不如从命了。”
 
