--- a/vol1/01-03.md
+++ b/vol1/01-03.md
@@ -86,7 +86,7 @@
 
 ——要是被那个女生看到我这个狼狈样子，可就真是衰到家了。
 
-我赶紧把门拉开一道缝，穿过去后再轻轻关上，进入伸手不见五指的空间之中。随后我点亮手机，发现面前又是一道通向下方的楼梯。将楼梯的台阶数量和高度大略记下后，左手摸着墙壁的我，凭借直觉走完了通向**那个房间**的最后一段路。
+我赶紧把门拉开一道缝，穿过去后再轻轻关上，进入伸手不见五指的空间之中。随后我点亮手机，发现面前又是一道通向下方的楼梯。将楼梯的台阶数量和高度大略记下后，右手摸着墙壁的我，凭借直觉走完了通向**那个房间**的最后一段路。
 
 &emsp;
 
