--- a/vol1/01-05.md
+++ b/vol1/01-05.md
@@ -131,17 +131,17 @@
 
 我走到墙边，拨动开关，点亮头上的吸顶灯后，才坐回工藤对面继续说道：
 
-“从你给我留下的印象看，工藤你在中等部的时候身边应该不缺女生吧？如果这样的话，就算对面是《公主大人》，难道还需要我来出主意吗？”
+“从你给我留下的印象看，工藤你在中等部的时候身边应该不缺女生吧？如果这样的话，就算对面是《公主》，难道还需要我来出主意吗？”
 
-“雨宫你是呆子吧，《公主大人》和一般的女生能一样吗？”
+“雨宫你是呆子吧，《公主》和一般的女生能一样吗？”
 
 “不都一样是女生吗，怎么就不一样了？”
 
-“你刚来这里所以不知道，排在人气榜女生组前三的《女王》《公主》和《天使》，到现在还保持着将来告白的男生全员击沉的纪录呢。就连讨论她们会和谁交往这件事，都已经成了蔓延整个学校的话题了。”
+“你刚来这里所以不知道，排在人气榜女生组前面的那三位女生，到现在还保持着将来告白的男生全员击沉的纪录呢。就连讨论她们会和谁交往这件事，都已经成了蔓延整个学校的话题了。”
 
 短短几句话之间，工藤已经喝掉了小半瓶可乐。我一边为那些被三位人气王击沉的男生们默哀，一边向面前这个可能成为下一个牺牲者的男生问道：
 
-“那工藤你就这么有自信能虏获《公主大人》的芳心？”
+“那工藤你就这么有自信能虏获《公主》的芳心？”
 
 “我本来也没有，但我觉得现在出手的难度会低一些。”
 
