--- a/vol1/01-12.md
+++ b/vol1/01-12.md
@@ -102,7 +102,7 @@
 
 渡边学姐立刻回答：
 
-“本校的任何学生如有问题，都可以直接写好之后放到我们三人的鞋柜中。我们收到问题后会对其进行分类，确定解答问题的时间和地点后回复给当事人。以上流程会以宣传单的形式贴在大厅的公示板上供各位阅读。”
+“本校的任何学生如有问题，都可以直接写好之后放到专门设置的信箱中。我们收到问题后会对其进行分类，确定解答问题的时间和地点后回复给当事人。以上流程会以宣传单的形式贴在大厅的公示板上供各位阅读。”
 
 副会长点了点头，问出了第二个问题：
 
