--- a/vol1/01-03.md
+++ b/vol1/01-03.md
@@ -32,11 +32,11 @@
 
 像他一样，在创作领域有着突出成就的同时，私生活十分混乱的人还有不少。
 
-就以如今还在我书包中的那一套五册的长篇小说的作者为例吧。生前便已在文坛风生水起，死后更是享受国葬待遇的这位传奇小说家，在他的长篇小说中毫无顾虑地将自己的正妻和情妇融合成同一个角色——这倒也不是他第一次这么干了，毕竟在创作这部小说的几十年前，他就在某部诗集中收录过对两位女性分别倾诉情愫的不同作品，为此还让一位暗恋过他妻子的文学评论家大为光火。
+就以如今还在我书包中的那一套四册的长篇小说的作者为例吧。生前便已在文坛风生水起，死后更是享受国葬待遇的这位传奇小说家，在他的长篇小说中毫无顾虑地将自己的正妻和情妇融合成同一个角色——这倒也不是他第一次这么干了，毕竟在创作这部小说的几十年前，他就在某部诗集中收录过对两位女性分别倾诉情愫的不同作品，为此还让一位暗恋过他妻子的文学评论家大为光火。
 
 说来讽刺，那位文学评论家与这位小说家决裂的起因并非评论家和他妻子的地下关系被发现，而是因为小说家与当时还是一位演员的那位情妇坠入爱河。这么一想，将文学评论变成一门独立领域的这位评论家，说不准是个同性爱者吧。
 
-类似的同性爱者，还有那位把钢琴协奏曲写的头重脚轻，让绝大多数听众忘记这首协奏曲除了长达两分半钟的序幕之外还有别的内容存在的作曲家。据说他以知名恋爱悲剧为主题创作的交响序曲中，就蕴含了他对自己深爱的男学生——这位男学生在19岁的时候自杀身亡——的情感。他在那个改过三四次名字的城市里有不少同性爱人，而所谓的婚姻也只不过是虚应故事。直到创作人生最后一部作品的时候，他都和自己的外甥以同性伴侣的身份过着幸福美满的生活。除此之外，连他的死亡都被一些人认为是因性取向被告发导致的结果——对外宣称是死于霍乱，而实际上则是自杀身亡。
+类似的同性爱者，还有那位把钢琴协奏曲写得头重脚轻，让绝大多数听众忘记这首协奏曲除了长达两分半钟的序幕之外还有别的内容存在的作曲家。据说他以知名恋爱悲剧为主题创作的交响序曲中，就蕴含了他对自己深爱的男学生——这位男学生在19岁的时候自杀身亡——的情感。他在那个改过三四次名字的城市里有不少同性爱人，而所谓的婚姻也只不过是虚应故事。直到创作人生最后一部作品的时候，他都和自己的外甥以同性伴侣的身份过着幸福美满的生活。除此之外，连他的死亡都被一些人认为是因性取向被告发导致的结果——对外宣称是死于霍乱，而实际上则是自杀身亡。
 
 平心而论，在如今这个网络高度发达的信息时代，这些都不是什么需要花大力气才能挖掘出来的内容。然而世间的大多数人仍然沉迷于“表面”的作品之中，而对水面下的“真相”或是一无所知，或是视而不见。
 
