--- a/vol1/01-19.md
+++ b/vol1/01-19.md
@@ -18,7 +18,7 @@
 
 我打开Linie发了两条消息，却迟迟看不到消息已读的提示。那个女人的确有忙于工作的习惯，大概现在还在参加什么会议所以没法接电话或回消息吧。
 
-于是我又试着联系了一下唯，但她也没有接电话。正当我打算再向唯发一条Linie消息的时候，手机传来了震动感。
+我想联系一下唯小姐，但却没有她的联系方式。正当我打算放下手机的时候，手机传来了震动感。
 
 屏幕上显示着“蒲池隆子”四个字。
 
