--- a/vol2/02-02.md
+++ b/vol2/02-02.md
@@ -2,7 +2,7 @@
 
 “校长的委托？”
 
-放学后的小餐厅里，听到我描述委托后的雪姐，略微皱起了眉头。
+放学后的宿舍。听到我描述委托后的雪姐，略微皱起了眉头。
 
 “对……问题在于，校长没有透露实际委托人的名字。如果是**那个女人**的话，就比较麻烦了。”
 
@@ -16,7 +16,7 @@
 
 “抱歉……大概我是回想起小时候被那个女人强制在她的朋友们面前才艺表演的黑历史，才会露出你看到的这个样子吧。”
 
-而且，偏偏文化祭的第一天是**9月23日**。这让我越发怀疑，**那个女人**是否在水面之下做了些什么。
+而且，偏偏文化祭的第一天还是**9月23日**。这让我越发怀疑，**那个女人**是否在水面之下做了些什么。
 
 “Ammy你的心情似乎不太好。是不是……”
 
@@ -38,7 +38,51 @@
 
 “……大概没错。”
 
-“那如果为了Ammy你自己呢？你还会上台演奏吗？”
+“那如果是为了你自己呢？Ammy你还会上台演奏吗？”
 
-——只为自己一人的演奏。
+——只为自己一人的演奏。换而言之，台下的所有人都可以当做不存在。
+
+然而，即使面对这个问题——
+
+“……抱歉，我还是不知道。”
+
+——我仍然给出了形同拒绝的回答。
+
+“既然如此……那我来当你的聆听者如何？”
+
+雪姐一边说着，一边从后面抱住了我的身体。从后脑勺传来的柔软触感，让我一时间忘却了之前的烦恼。
+
+明明我们之间的关系早已远远超过了恋爱喜剧中常见的状况，但我的心跳还是加快了一点。
+
+“可以啊。”
+
+我的声音中没有了犹豫。因为这一次，提出请求的是我的恋人——那个将我从深渊中拉出来的女孩子。
+
+“说起来，Ammy接触钢琴的契机是哪一首曲子呢？”
+
+“应该是……贝多芬的《月光》奏鸣曲吧。小时候跟着那个女人回老家的时候，我翻出了一盘磁带，B面就收录了完整的《月光》。呆在老家的那段时间，我基本每天都只听这一面。”
+
+“真巧呢。我老家也有一盘收录了《月光》的磁带。不过在奏鸣曲的前面还有一段别的乐曲，每次倒带都要花一番功夫。”
+
+“别的乐曲”——我的那盘磁带在B面似乎也有一段。然而，我却已经记不得名字了。
+
+“难不成我和雪姐听的是同一版？”
+
+听到我的问题后，雪姐似乎轻轻笑了一下。
+
+“大概是哦。说不准这也算是某种缘分吧。怎么，Ammy想到什么了吗？”
+
+——虽然记不得名字，但那首乐曲的旋律我还记得。主奏的乐器——没错，也是钢琴。
+
+“贝多芬，G大调，钢琴协奏曲……我查一下吧。”
+
+我拿出手机，在浏览器中输入“Beethoven G Major Piano Concerto”开始搜索，随后就出现了想要的结果。
+
+——贝多芬，G大调第四钢琴协奏曲，作品58。
+
+我跳过排在最前面的Wkpd介绍，直接点进IMSLP的页面，开始下载PDF格式的乐谱文件。
+
+乐谱刚一下载完毕，我就直接打开文件，滑到了第三乐章的所在位置。手机屏幕上显示的音符，化为清晰的旋律在我脑海中播放出来——这正是录制于回忆中的那盘磁带B面上，排在《月光》奏鸣曲前面的曲子。
+
+然而，这首协奏曲的前两个乐章，我却毫无印象——因为那个夏天的我一直在听B面，从未向磁带的A面投入过一丝一毫的注意力。
 
