--- a/vol2/02-02.md
+++ b/vol2/02-02.md
@@ -86,3 +86,15 @@
 
 然而，这首协奏曲的前两个乐章，我却毫无印象——因为那个夏天的我一直在听B面，从未向磁带的A面投入过一丝一毫的注意力。
 
+“雪姐，你的蓝牙耳机可以借我吗？我想复习下全曲。”
+
+“可以啊。我稍微找找。”
+
+雪姐从床上坐起，舒展了一下上半身之后，下床走到书桌旁，从书包中翻出了蓝牙耳机递给我。我戴上耳机，随后打开手机上的Voustube程序，输入曲名之后，又追加了某位钢琴家的名字，这才按下了搜索按钮。随后，这位以爆炸头的发型为人熟知的天才钢琴家与伦敦交响乐团合奏的音乐顺着耳机流入我的大脑。
+
+然而，面对这首钢琴协奏曲的前两乐章，我却始终感觉有什么地方不对劲——这种不对劲的感觉，就如同始终无法正确咬合的齿轮一般。
+
+关掉了手机屏幕的我坐在椅子上，闭上眼睛，试图再一次让自己的感觉与音乐同步。这时，钢琴与弦乐合奏的第二乐章在减弱中结束，熟悉的回旋曲再一次在耳边响起。
+
+“……还是不行吗。”
+
