--- a/vol2/02-02.md
+++ b/vol2/02-02.md
@@ -98,3 +98,15 @@
 
 “……还是不行吗。”
 
+回过神的时候，我已经反复听了三遍，但违和感却始终没有消失。
+
+直觉告诉我，如果在文化祭上弹这首曲子，那么给观众留下“不完全燃烧”的印象，已经是最不坏的结果了。
+
+——该怎么办才好。
+
+正当我拼命思索着的时候，突然，新的钢琴和弦闯入了我的耳朵。
+
+从弱渐强，连续响起八次的和弦，让我想到了教堂中才会响起的钟声。
+
+紧接着，钢琴的C小调和弦与琶音，以及随之响起的弦乐，宛如惊涛骇浪一般，将我直接淹没。
+
