--- a/vol1/01-05.md
+++ b/vol1/01-05.md
@@ -75,7 +75,9 @@
 
 落款是“Dornröschen”。
 
-一年前，这个以睡美人自称的女大学生留给我的，就只有我手中的这个笔记本，而从我这里收走的，则是——
+横线纸上还有一张结算小票，背面印着粉红色的唇印。
+
+一年前，这个以睡美人自称的女大学生留给我的，就只有我手中的这个笔记本。而从我这里收走的，则是——
 
 我晃晃脑袋，将不着边际的思绪清理干净。事到如今，再后悔也没什么用处，更没必要将渡边学姐和那个女大学生放在一起比较。
 
