--- a/vol1/01-12.md
+++ b/vol1/01-12.md
@@ -50,9 +50,9 @@
 
 听到门后传来的男生声音，渡边学姐打开了学生会室的门。
 
-我们走进房间，看到一位容姿端丽的三年级女生坐在学生会长的位置上——她应该就是学校内人称“女王”的朝仓しずく会长没错。她面前的一位男生似乎刚刚完成汇报工作，正往旁边空着的位置走去——我快速扫视了一下学生会室，判断出这位男生大概是学生会的副会长。
+我们走进房间，看到一位容姿端丽的三年级女生坐在学生会长的位置上——她应该就是学校内人称“女王”的朝仓しずく会长没错。她面前的一位男生似乎刚刚完成汇报工作，正往旁边空着的位置走去——我快速扫视了一下学生会室，判断出这位男生大概是学生会的书记。
 
-学生会中的其他几位学长学姐——大概是书记、会计和总务——都在各自的位置上忙于处理事务。这时我注意到有个人坐在一边的沙发上。他正在打着瞌睡。
+学生会中的其他几位学长学姐——大概是古会长、会计和总务——都在各自的位置上忙于处理事务。这时我注意到有个人坐在一边的沙发上。他正在打着瞌睡。
 
 我认得那个穿着粉色的夏威夷衫和牛仔裤，看上去四十五六岁的男人的侧脸——他是古川老师。印象中是高等部的教导主任，但我还是第一次见到他穿的这么随便。
 
@@ -90,9 +90,9 @@
 
 学生会的成员们逐一回答。朝仓会长最后转向刚才向她汇报的那个男生：
 
-“入江副会长，你怎么看？”
+“入江书记，你怎么看？”
 
-被点到名字的副会长思考了片刻后回答：
+被点到名字的书记思考了片刻后回答：
 
 “如果能够回答我的几个问题的话，我认为可以同意。”
 
@@ -104,7 +104,7 @@
 
 “本校的任何学生如有问题，都可以直接写好之后放到专门设置的信箱中。我们收到问题后会对其进行分类，确定解答问题的时间和地点后回复给当事人。以上流程会以宣传单的形式贴在大厅的公示板上供各位阅读。”
 
-副会长点了点头，问出了第二个问题：
+入江前辈点了点头，问出了第二个问题：
 
 “目前你们的人数只够组建同好会。那么之后如果有新人加入，是否会改以社团的形式申请专门的活动室和经费？”
 
@@ -116,7 +116,7 @@
 
 “那么让同好会自然消灭，也并非不可行。”
 
-副会长听到我的这些话，皱起了眉头，看上去想再说些什么。这时突然传来了一个声音：
+入江前辈听到我的这些话，皱起了眉头，看上去想再说些什么。这时突然传来了一个声音：
 
 “没必要搞那么正式吧，入江。”
 
@@ -124,7 +124,7 @@
 
 “他们这个做题家协会既不会占用社团活动的经费，看上去也不需要专门的社团活动室——当然，如果你们真想要一间的话，也不是不能批就是了。我对这种无需损害学生利益就能为学校带来好处的做法还是很支持的，就批准他们的申请好了。”
 
-听到古川老师的话，入江副会长迟疑了一下，随后点了点头：
+听到古川老师的话，入江前辈迟疑了一下，随后点了点头：
 
 “那我就没有意见了。”
 
@@ -144,11 +144,11 @@
 
 听到渡边学姐的问题，朝仓学姐立刻回答：
 
-“很遗憾，高中三年期间，他只担任过副会长。这所学校成立第一年的学生会选举中，他输给了另一名学生，从此就一直很不甘心，这才希望我能够担任学生会长。”
+“很遗憾，高中三年期间，他只担任过副会长。”
 
 我的脑海中突然冒出了校长在入学式当天清晨讲过的内容——《黑衣学生会长》的传说。这让我产生了对答案试试的念头。
 
-“当时赢得选举的学生会长，就是传说中被称为《黑衣学生会长》的那位OG吗？”
+“当时的学生会长，就是传说中被称为《黑衣学生会长》的那位OG吗？”
 
 朝仓会长以清冽的声音回答：
 
