--- a/vol2/02-02.md
+++ b/vol2/02-02.md
@@ -110,3 +110,48 @@
 
 紧接着，钢琴的C小调和弦与琶音，以及随之响起的弦乐，宛如惊涛骇浪一般，将我直接淹没。
 
+我就这样放弃了反抗的想法，任凭旋律将我带向不知名的远方——突然，身体感受到了轻微的冲击感，是雪姐在轻拍我的肩膀。
+
+「……抱歉，一不小心就沉迷进去了。」
+
+我摘下一边耳机，看向手机上显示的播放时间——已经过去了七八分钟。雪姐摇了摇头，对我说道：
+
+「我这边才是该抱歉打扰到你了。能让我也听一下吗？」
+
+「可以啊。」
+
+我点头答应，随后将蓝牙耳机收好，把手机调成外放模式，又将视频的进度条拉到最前面。随后，乐曲最初的和弦音再一次响起。
+
+「这首乐曲我有印象。记得某部知名音乐漫画中，男主角在文化祭上演奏的就是这一首。」
+
+听到雪姐的声音，我再一次看向视频标题——那里有着正在播放的乐曲的名字。
+
+Sergei Rachmaninoff Piano Concerto No.2, Op.18。
+
+浪漫主义音乐晚期的知名作曲家，谢尔盖·拉赫玛尼诺夫。
+
+正当我习惯性地想要查阅这首协奏曲的创作经纬时，雪姐打断了我的想法：
+
+「抱歉，Ammy。我可以再躺一会吗？感觉身体还是不太舒服。」
+
+我听到后面的内容，立刻反应过来她所说的「不太舒服」指的是什么意思。对女生来说，每个月的那几天重则会搞坏身体，最轻微的情况也会导致心情低落。
+
+至少也该提供一点让雪姐恢复心情的服务吧。我想了一下，说出了一个建议：
+
+「要躺在我腿上试试吗？」
+
+「你都这么说了，那我也只好恭敬不如从命喽。」
+
+于是我甩下拖鞋，拿着手机和蓝牙耳机坐到床的一侧，让雪姐的头枕在自己的大腿上。随后，我再次将手机和蓝牙耳机配对，尽可能让音乐旋律不要干扰她的意识。
+
+等到协奏曲的第一乐章结束时，雪姐已经彻底睡着了，嘴角甚至还有一点口水流下。
+
+——真是的。男生的膝枕有这么舒服吗……
+
+我一边在心里吐槽，一边开始在手机上查阅拉赫玛尼诺夫第二钢琴协奏曲的相关资料和总谱。
+
+相比贝多芬所在的古典主义时代，浪漫主义时代的乐曲不论是演奏的难度还是复杂性都不在一个水平线上。如果说练习贝多芬的乐曲只需要一个多月的时间，那么拉赫玛尼诺夫的这首钢琴协奏曲，恐怕需要从暑假一开始的时候就着手练习，才能达到在文化祭上演出的水平。
+
+文化祭的演出带来的评价，也许并不值得我强行压榨自己的潜力。但如果是为了雪姐一个人的演奏的话——
+
+我一边思考着这些未必有多大意义的想法，一边伴随着音乐旋律开始翻阅钢琴协奏曲的总谱，同时决定再去搜索一些资料，查询演奏这一乐曲的要点技巧。
