--- a/vol2/02-03.md
+++ b/vol2/02-03.md
@@ -46,3 +46,36 @@
 
 ◇
 
+——恋爱方面的咨询，希望能找一个没有人的地方讨论。
+
+森山同学留在信箱里的信中，写的就是这样的内容。
+
+「看起来是不希望这件事被学校里的其他人知道吗……」
+
+雪姐若有所思地说着，我也点了点头表示同意。
+
+「怎么办，要去**那里**吗？」
+
+听到我的问题，雪姐露出了有些为难的表情，过了一会才说道：
+
+「也只有**那里**才符合条件了吧，虽然我不太喜欢有别的人在。」
+
+我不是不能理解她的心情。换成我是雪姐，也不会容忍只属于我们两个人的空间被其他人侵入。
+
+「看来也只能这样了。抱歉让你这么困扰。」
+
+「没什么，只要之后你满足我的一个愿望就可以。」
+
+愿望——这个词让我略微有点不太放心，总不会是雪姐又萌生了什么想要捉弄我的念头吧。
+
+「是什么愿望？」
+
+「现在还没想好，不过不会太过分。」
+
+虽然雪姐的样子看上去若无其事，但这却更加让我在意她的脑子里在想什么。
+
+「那就放学的时候在这里集合吧，到时候从车库过去。」
+
+和雪姐约定好时间地点之后，我们分头向各自的教室走去。
+
+◇
