--- a/vol2/02-03.md
+++ b/vol2/02-03.md
@@ -79,3 +79,109 @@
 和雪姐约定好时间地点之后，我们分头向各自的教室走去。
 
 ◇
+
+回到教室之后，我趁着午休人少的时候，将一张写有「放学后在信箱分头集合」的纸放在了森山同学的桌上。大概是这份留言起到了效果的作用，下午森山同学并没有再像上午一样频繁向这边投来视线，不过坐在后面的我仍然能从她细微的动作感觉到一丝焦急的情绪。
+
+转眼便到了下午的放学时间。我确认森山同学已经离开后，又等了一两分钟，才从桌边拿起书包，若无其事地穿过教室向门口走去。如果和她一起离开，恐怕又会在同学之间引发流言——且不论这是否会影响到工藤的心情，若是流言演变成我在脚踏两条船的地步，处理起来就要耗费不少精力了。
+
+我沿着学生云集的走廊走到电梯口，按了一下下行按钮。过了不到半分钟，电梯门在我的面前打开了。其实从三楼到大厅所在的二楼纵使走楼梯也花费不了多少时间，不过我还是想在电梯里稍微放松一下。
+
+当我从电梯出来，走到离公告板还有十米左右的地方时，雪姐和森山同学已经站在信箱前了。这时，我突然意识到自己疏忽了一点——纵使这并不算是约会，但让女孩子等这件事实在还是有点差劲。
+
+看到我走过来的森山同学已经露出了不耐烦的神色，幸好雪姐这时开口化解了尴尬的气氛：
+
+「既然Ammy已经到了，那我们就出发吧。可以麻烦你带路吗？」
+
+「好的，那我就走在前面了。」
+
+说完话后，我便转过身体，再一次向刚才来时的电梯间走去，雪姐和森山同学则跟在我的后面。
+
+大概是话题太过敏感的缘故，一路上我们并没有什么对话。直到走进电梯，确认里面空无一人之后，森山同学才打破了沉默：
+
+「你们要把我带到哪里？」
+
+「森山同学不是说希望找一个没有人的地方说话吗？所以我选了一条基本不会有学生走的路线，这样可以确保信息不会泄漏。」
+
+这时，电梯在地下一层停了下来，随后电梯门就打开了。我们走出电梯，广大的空间上方排布着各类管线，地面则停放着教职工的私人用车。
+
+「这是车库？」
+
+「没错，从这个车库理论上可以通向学校里的任意一栋建筑——包括后来修建的宿舍楼，也设计了通向车库的紧急出口。我们现在就是要通过车库去目的地。」
+
+听到我的回答，森山同学点了点头。这时，雪姐问了一个问题：
+
+「你平常都是从车库进那个房间的吗？」
+
+「嗯。图书馆毕竟会有人进出，从那里进去搞不好会出岔子，还是从车库走更保险。」
+
+雪姐似乎接受了我的解释，并没有再多说什么。一时间，只有我们三人的脚步声在车库中响起。
+
+按照记忆中的路线在车库中拐了几个弯之后，秘密房间的入口出现在了我们面前。
+
+「就是这里了。」
+
+我从口袋里拿出学生卡，将其放在自动锁上。随着开锁的声音响起，我转动门把手将门打开，一瞬间三个人都抖了一下。看样子即使气温相比四月时有所上升，但这个房间还是一样的寒冷。
+
+看到房间里的钢琴，森山同学感慨地说道：
+
+「我都不知道还有这么一个地方。」
+
+听到她的声音，雪姐也补充了一句：
+
+「我之前在图书馆阅览书籍的时候，就一直好奇一层的那扇门到底通向哪里。要不是Ammy从里面打开了门，我大概也不会有进来的机会。」
+
+大概每一个到这个房间来的人，都会产生同样的感想吧。不过，现在并不是讨论这些内容的时候。
+
+「所以，森山同学你的所谓恋爱咨询，到底是哪方面的内容？」
+
+听到我的问题，森山同学一脸不爽地回答：
+
+「雨宫同学和渡边前辈你们也懂的吧？就是恋爱故事里那种大小姐的家庭强迫相亲的戏码。」
+
+「相亲……吗？生在这种家庭里还真是辛苦啊。」
+
+「还不是我哥害的，明明我爸妈给他找了一个门当户对的联姻对象，结果他倒是直接把对方给拒了，现在可好，我成了那个牺牲品。」
+
+「那森山同学你打算怎么办呢？」
+
+听到雪姐的问题，森山思考了一下，露出不耐烦的态度：
+
+「我这不是想不出来怎么办，所以才来问你们的吗？」
+
+既然她说到这一步，那我也只能从脑海里搜寻解决方案了。
+
+「去见一面如何？」
+
+「哈啊？万一对面是个除了钱什么都没有的糟老头子，把我的心情搞坏了，难道你要负责吗？」
+
+虽然在上午看到森山同学的留言时就有所预感，但她现在的这个样子已经完全颠覆了我之前对她的认知。原来「公主」不为人知的一面居然这么可怕的吗？表面功夫和内心世界的区别未免也太大了。
+
+更何况，所谓「除了钱什么都没有的糟老头子」基本也只存在于虚拟故事的想象之中。真要是硬条件实在太糟糕，那对面的家庭也不好意思拿出手吧。
+
+但看森山同学如今的这个反应，恐怕她是不肯亲自去见这个相亲对象了。
+
+「所以森山同学你的想法是……让我们替你去见？」
+
+雪姐试探性地询问了一下，森山同学立刻点头：
+
+「对。渡边前辈，能麻烦你替我去见一下那个人吗？时间和地点我会发给你，全程的费用我也会……」
+
+「如果森山同学你是这个想法的话，那我们不能答应。」
+
+我不由分说地打断了她的话。开什么玩笑，雪姐不擅长应对陌生人这点我可是清清楚楚，要她去这种场合，搞不好比杀了她还难受。
+
+「哈啊？难不成雨宫同学你要去？相亲现场居然是个男人，你觉得对面会怎么想？」
+
+没错，这也是一个问题。但无论如何，我都不想让雪姐应付这种麻烦事。这时，突然闪现的一个想法让我脱口而出：
+
+「那如果这样呢？」
+
+听到我的声音，森山同学一下子呆住了，而雪姐像是察觉到了什么一样说道：
+
+「Ammy……难不成你要去？」
+
+没错，我刚才的声音已经不是平常的嗓音，而是更偏向女孩子的中性声音。
+
+「也只能这样了吧？总不能让森山同学再拜托别人。雪姐，你的衣服可以借我穿一天吗？另外，我可能还需要一顶假发，明天白天我想去挑一下，不知道两位可不可以陪我一起去？」
+
+此时的我还没想到，这个突然产生的想法，会在未来引发怎样的事端。
