--- a/vol2/02-03.md
+++ b/vol2/02-03.md
@@ -180,7 +180,7 @@
 
 「Ammy……难不成你要去？」
 
-没错，我刚才的声音已经不是平常的嗓音，而是更偏向女孩子的中性声音。
+没错，我此刻的声音已经不是平常的嗓音，而是更偏向女孩子的中性声音。
 
 「也只能这样了吧？总不能让森山同学再拜托别人。雪姐，你的衣服可以借我穿一天吗？另外，我可能还需要一顶假发，明天白天我想去挑一下，不知道两位可不可以陪我一起去？」
 
