--- a/vol1/01-12.md
+++ b/vol1/01-12.md
@@ -50,9 +50,9 @@
 
 听到门后传来的男生声音，渡边学姐打开了学生会室的门。
 
-我们走进房间，看到一位容姿端丽的三年级女生坐在学生会长的位置上——她应该就是学校内人称“女王”的朝仓しずく会长没错。她面前的一位男生似乎刚刚完成汇报工作，正往旁边空着的位置走去——我快速扫视了一下学生会室，判断出这位男生大概是学生会的书记。
+我们走进房间，看到一位容姿端丽的二年级女生坐在学生会长的位置上——她应该就是学校内人称“女王”的朝仓しずく会长没错。她面前的一位男生似乎刚刚完成汇报工作，正往旁边空着的位置走去——我快速扫视了一下学生会室，判断出这位男生大概是学生会的书记。
 
-学生会中的其他几位学长学姐——大概是古会长、会计和总务——都在各自的位置上忙于处理事务。这时我注意到有个人坐在一边的沙发上。他正在打着瞌睡。
+学生会中的其他几位学长学姐——大概是副会长、会计和总务——都在各自的位置上忙于处理事务。这时我注意到有个人坐在一边的沙发上。他正在打着瞌睡。
 
 我认得那个穿着粉色的夏威夷衫和牛仔裤，看上去四十五六岁的男人的侧脸——他是古川老师。印象中是高等部的教导主任，但我还是第一次见到他穿的这么随便。
 
