--- a/vol1/01-12.md
+++ b/vol1/01-12.md
@@ -174,7 +174,7 @@
 
 我仿佛可以看到，她紧闭着的双眼两侧有着透明的水珠。
 
-不知过了多久，朝仓学姐转过身来对入江副会长说道：
+不知过了多久，朝仓学姐转过身来对副会长说道：
 
 “我有急事要赶回去。学级委员会这边就拜托你了。”
 
@@ -184,15 +184,15 @@
 
 “大概朝仓学姐的至亲遭遇了重大的不幸，才会需要她立刻过去。”
 
-不仅朝仓学姐和入江副会长，学生会的其他人和渡边学姐也露出了惊讶的表情。
+不仅朝仓学姐和副会长，学生会的其他人和渡边学姐也露出了惊讶的表情。
 
-片刻后，入江副会长尽可能平静地说道：
+片刻后，副会长尽可能平静地说道：
 
 “那这边就交给我们吧。”
 
 “嗯，麻烦你了。”
 
-朝仓学姐说完就离开了，入江副会长则带着学生会的其他人进了会议室，外面只剩下了我和渡边学姐。
+朝仓学姐说完就离开了，副会长则带着学生会的其他人进了会议室，外面只剩下了我和渡边学姐。
 
 “雨宫同学，你是怎么看出来的？”
 
