--- a/vol1/01-01.md
+++ b/vol1/01-01.md
@@ -16,9 +16,9 @@
 
 过了一会，男人和女人开始大打出手。而那个哭泣的小男孩，根本吸引不到他们中任何一个人的注意。
 
-“爸爸，妈妈，求求你们，求求你们，可不可以别再吵架了？”
+『爸爸，妈妈，求求你们，求求你们，可不可以别再吵架了？』
 
-“我会乖乖做个好孩子的。”
+『我会乖乖做个好孩子的。』
 
 然而，小男孩的话根本传不到任何一个人的耳边。于是小男孩拿起地上的一个薄壁玻璃茶杯，握住把手，狠狠砸了下去。
 
@@ -100,7 +100,7 @@
 
 我读小学的时候，有一次那个女人带我去拜访她的好友。这位阿姨看到我的时候问了我一个问题——
 
-“你会想要一个弟弟或者妹妹吗？”
+「你会想要一个弟弟或者妹妹吗？」
 
 我没有回答，只是摇了摇头。
 
@@ -122,27 +122,27 @@
 
 回到主卧室的时候，**那个女人**刚刚醒来。
 
-“要去学校了吗？”
+「要去学校了吗？」
 
-“嗯。唯（唯さん）还在睡？”
+「嗯。唯（唯さん）还在睡？」
 
-“过会我就叫她起来。就算中等部的入学式下午才开，也不能让她睡到中午。对了，你有没有落下什么东西？”
+「过会我就叫她起来。就算中等部的入学式下午才开，也不能让她睡到中午。对了，你有没有落下什么东西？」
 
-“应该没有，我的行李昨天都送到宿舍了。”
+「应该没有，我的行李昨天都送到宿舍了。」
 
 所谓的行李，其实也只要一个26英寸的行李箱就够。
 
-“那就好。要我送你去学校吗？”
+「那就好。要我送你去学校吗？」
 
-“不必了。您上午还有研究室那边的工作吧？”
+「不必了。您上午还有研究室那边的工作吧？」
 
-“倒也没那么多工作，不过既然你这么说那就自己去吧，我下午再送唯去学校。”
+「倒也没那么多工作，不过既然你这么说那就自己去吧，我下午再送唯去学校。」
 
-“明白了。”
+「明白了。」
 
-“哦对了，客厅里我放了个礼盒，你记得到学校了给校长送去。”
+「哦对了，客厅里我放了个礼盒，你记得到学校了给校长送去。」
 
-“嗯。”
+「嗯。」
 
 短暂的表面功夫（互相试探）结束后，我走进更衣室换好制服，提着书包出来——此时我想起自己应该把**那本小说**带到宿舍去读，于是从客厅的书架上抽下4册文库本塞进书包，又将礼盒也一并带上，这才离开公寓，将门关好，向前方的电梯走去。
 
